--- a/app/src/main/res/layout/activity_dashboard_grid_fab.xml
+++ b/app/src/main/res/layout/activity_dashboard_grid_fab.xml
@@ -220,6 +220,64 @@
                             android:layout_marginLeft="15px"
                             android:orientation="vertical">
 
+
+                            <Button
+                                android:id="@+id/escanear"
+                                style="@style/Widget.AppCompat.Button"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@color/colorRojo"
+                                android:text="Escanear DNI"
+                                android:textColor="#FFFFFF" />
+                        </LinearLayout>
+
+
+                    </RelativeLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/spacing_mxlarge" />
+
+
+
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/spacing_medium"
+                android:layout_marginLeft="@dimen/spacing_middle"
+                android:layout_marginRight="@dimen/spacing_middle"
+                android:layout_marginTop="@dimen/spacing_middle"
+                android:visibility="visible"
+                app:cardCornerRadius="4dp"
+                app:cardElevation="2dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="@dimen/spacing_middle">
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/spacing_mxlarge" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginStart="15px"
+                            android:layout_marginLeft="15px"
+                            android:orientation="vertical">
+
                             <TextView
                                 android:id="@+id/cargando"
                                 android:layout_width="match_parent"
@@ -254,8 +312,6 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/spacing_mxlarge" />
-
-
 
 
                 </LinearLayout>
